--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -28,17 +28,14 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
-    env:
-      MDBOOK_VERSION: 0.5.2
-      MDBOOK_LINKCHECK_VERSION: 0.7.7
     steps:
       - uses: actions/checkout@v4
-      - name: Install mdBook
-        run: |
-          curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
-          rustup update
-          cargo install --version ${MDBOOK_VERSION} mdbook
-          cargo install --version ${MDBOOK_LINKCHECK_VERSION} mdbook-linkcheck
+      - uses: taiki-e/cache-cargo-install-action@v2
+        with:
+          tool: mdbook@0.5.2
+      - uses: taiki-e/cache-cargo-install-action@v2
+        with:
+          tool: mdbook-linkcheck@0.7.7
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
