--- a/book.toml
+++ b/book.toml
@@ -19,3 +19,6 @@ level = 0
 [output.linkcheck]
 # This might be too annoying.
 warning-policy = "error"
+
+[preprocessor.backlinks] # https://github.com/Nadrieril/mdbook-backlinks
+optional = true
